# rcd

./: .README.md.swp  LICENSE  README.md  pyproject.toml  rcd.py
man/man1/: rcd.1
